force-app/main/default/objects/Order/fields/Abbott_Partner_Code__c.field-meta.xml
<CustomField>
    <fullName>Abbott_Partner_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Abbott Partner Code</label>
    <referenceTo>AbbottPartner__c</referenceTo>
    <relationshipLabel>Orders (Abbott Partner Code)</relationshipLabel>
    <relationshipName>Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>