force-app/main/default/objects/Order/fields/Abbott_Sales_Person__c.field-meta.xml
<CustomField>
    <fullName>Abbott_Sales_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Abbott Sales Person</label>
    <referenceTo>AbbottPartner__c</referenceTo>
    <relationshipLabel>Orders (Abbott Sales Person)</relationshipLabel>
    <relationshipName>Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>