force-app/main/default/objects/Order/fields/Alternate_Receiver_Phone__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Receiver_Phone__c</fullName>
    <label>Alternate Receiver Phone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>