force-app/main/default/objects/Order/fields/AlternateReceiverName__c.field-meta.xml
<CustomField>
    <fullName>AlternateReceiverName__c</fullName>
    <label>Alternate Receiver Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>