force-app/main/default/objects/Order/fields/ApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>ApprovalStatus__c</fullName>
    <label>Approval Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>