force-app/main/default/objects/Order/fields/ApprovedRejectedBy__c.field-meta.xml
<CustomField>
    <fullName>ApprovedRejectedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved / Rejected By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>