force-app/main/default/objects/Order/fields/Call1Date__c.field-meta.xml
<CustomField>
    <fullName>Call1Date__c</fullName>
    <label>Call 1 Date</label>
    <type>DateTime</type>
</CustomField>