force-app/main/default/objects/Order/fields/Call2Date__c.field-meta.xml
<CustomField>
    <fullName>Call2Date__c</fullName>
    <label>Call 2 Date</label>
    <type>DateTime</type>
</CustomField>