force-app/main/default/objects/Order/fields/Call3Date__c.field-meta.xml
<CustomField>
    <fullName>Call3Date__c</fullName>
    <label>Call 3 Date</label>
    <type>DateTime</type>
</CustomField>