force-app/main/default/objects/Order/fields/ChannelResponse__c.field-meta.xml
<CustomField>
    <fullName>ChannelResponse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Response</label>
    <referenceTo>ChannelResponse__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>