force-app/main/default/objects/Order/fields/CreatedFromCRRecord__c.field-meta.xml
<CustomField>
    <fullName>CreatedFromCRRecord__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Backend field to confirm that Order record was created from Channel Response record.</description>
    <label>Created From CR Record</label>
    <type>Checkbox</type>
</CustomField>