force-app/main/default/objects/Order/fields/CreatedFromNewOrderButton__c.field-meta.xml
<CustomField>
    <fullName>CreatedFromNewOrderButton__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A backend field to confirm if Order record is created from New Order Aura Component.</description>
    <label>Created From New Order Button</label>
    <type>Checkbox</type>
</CustomField>