force-app/main/default/objects/Order/fields/DateRequiredBy__c.field-meta.xml
<CustomField>
    <fullName>DateRequiredBy__c</fullName>
    <label>Date Required By</label>
    <type>Date</type>
</CustomField>