force-app/main/default/objects/Order/fields/Day_Before_Shipment_Day__c.field-meta.xml
<CustomField>
    <fullName>Day_Before_Shipment_Day__c</fullName>
    <description>Triggers a Status update to &apos;Activated&apos; the day before shipment..</description>
    <formula>OR(
 AND(WEEKDAY(PreferredDeliveryDate__c) = 2, PreferredDeliveryDate__c - TODAY() = 3),
 AND(
  AND(WEEKDAY(PreferredDeliveryDate__c) &gt;= 3, WEEKDAY(PreferredDeliveryDate__c) &lt;= 6),
  PreferredDeliveryDate__c - TODAY() = 1
 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day Before Shipment Day</label>
    <type>Checkbox</type>
</CustomField>