force-app/main/default/objects/Order/fields/Days_till_next_call_from_last_order__c.field-meta.xml
<CustomField>
    <fullName>Days_till_next_call_from_last_order__c</fullName>
    <label>Days till next call from last order</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>