force-app/main/default/objects/Order/fields/Delivery_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Attempts__c</fullName>
    <label>Delivery Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>