force-app/main/default/objects/Order/fields/Delivery_Partner_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Partner_Payment_Method__c</fullName>
    <label>Delivery Partner Payment Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>