force-app/main/default/objects/Order/fields/Delivery_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Pattern__c</fullName>
    <label>Delivery Pattern</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>14</fullName>
            </value>
            <value>
                <fullName>21</fullName>
            </value>
            <value>
                <fullName>28</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>