force-app/main/default/objects/Order/fields/DispositionDate__c.field-meta.xml
<CustomField>
    <fullName>DispositionDate__c</fullName>
    <label>Disposition Date</label>
    <type>Date</type>
</CustomField>