force-app/main/default/objects/Order/fields/ErpId__c.field-meta.xml
<CustomField>
    <fullName>ErpId__c</fullName>
    <description>[9-Jul-21 KSK] Used in TW Market data migration; Dynamics CRM</description>
    <label>ERP ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>