force-app/main/default/objects/Order/fields/eStoreAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>eStoreAccountNumber__c</fullName>
    <label>eStore Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>