force-app/main/default/objects/Order/fields/ExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>ExpiryDate__c</fullName>
    <description>[9-Jul-21 KSK] Used in TW Market data migration; Dynamics CRM</description>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>