force-app/main/default/objects/Order/fields/ExtractedforLabeling__c.field-meta.xml
<CustomField>
    <fullName>ExtractedforLabeling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Extracted for Labeling</label>
    <type>Checkbox</type>
</CustomField>