force-app/main/default/objects/Order/fields/FileExportDate__c.field-meta.xml
<CustomField>
    <fullName>FileExportDate__c</fullName>
    <label>File Export Date</label>
    <type>Date</type>
</CustomField>