force-app/main/default/objects/Order/fields/FirstRepeatOrderName__c.field-meta.xml
<CustomField>
    <fullName>FirstRepeatOrderName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>[9-Jul-21 KSK] Used in TW Market Data Migration; Dynamics CRM</description>
    <label>First Repeat Order Name</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Orders (First Repeat Order Name)</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>