force-app/main/default/objects/Order/fields/Follow_up_call_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_call_Eligible__c</fullName>
    <formula>NOT(ISBLANK(Days_till_next_call_from_last_order__c))</formula>
    <label>Follow-up call Eligible</label>
    <type>Checkbox</type>
</CustomField>