force-app/main/default/objects/Order/fields/ForwardedDate__c.field-meta.xml
<CustomField>
    <fullName>ForwardedDate__c</fullName>
    <label>Forwarded Date</label>
    <type>Date</type>
</CustomField>