force-app/main/default/objects/Order/fields/ForwardTo__c.field-meta.xml
<CustomField>
    <fullName>ForwardTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Forward To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>