force-app/main/default/objects/Order/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <inlineHelpText>Enter between 1-15</inlineHelpText>
    <label>Frequency</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>