force-app/main/default/objects/Order/fields/Has_Multiple_Order_Products__c.field-meta.xml
<CustomField>
    <fullName>Has_Multiple_Order_Products__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Multiple Order Products?</label>
    <type>Checkbox</type>
</CustomField>