force-app/main/default/objects/Order/fields/HCPName__c.field-meta.xml
<CustomField>
    <fullName>HCPName__c</fullName>
    <formula>RecommendedBy__r.PartnerName__c</formula>
    <label>HCP Name</label>
    <type>Text</type>
</CustomField>