force-app/main/default/objects/Order/fields/IntendedStartDate__c.field-meta.xml
<CustomField>
    <fullName>IntendedStartDate__c</fullName>
    <label>Intended Start Date</label>
    <type>Date</type>
</CustomField>