force-app/main/default/objects/Order/fields/Is_Cloned__c.field-meta.xml
<CustomField>
    <fullName>Is_Cloned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Cloned?</label>
    <type>Checkbox</type>
</CustomField>