force-app/main/default/objects/Order/fields/LocationId__c.field-meta.xml
<CustomField>
    <fullName>LocationId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location Name</label>
    <referenceTo>Channel__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>