force-app/main/default/objects/Order/fields/MC_MY_Sync_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>MC_MY_Sync_Eligibility__c</fullName>
    <formula>OrderedBy__c != null &amp;&amp; OrderedBy__r.MC_MY_Sync_Eligibility__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MC MY Sync Eligibility</label>
    <type>Checkbox</type>
</CustomField>