force-app/main/default/objects/Order/fields/MC_Sync_Eligibility_VN__c.field-meta.xml
<CustomField>
    <fullName>MC_Sync_Eligibility_VN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MC Sync Eligibility VN</label>
    <type>Checkbox</type>
</CustomField>