force-app/main/default/objects/Order/fields/Membership__c.field-meta.xml
<CustomField>
    <fullName>Membership__c</fullName>
    <label>Membership ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>