force-app/main/default/objects/Order/fields/NoChargeReason__c.field-meta.xml
<CustomField>
    <fullName>NoChargeReason__c</fullName>
    <label>Reason for No Charge</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Educational Use</fullName>
            </value>
            <value>
                <fullName>Evaluation</fullName>
            </value>
            <value>
                <fullName>Product / Service Complaint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>