force-app/main/default/objects/Order/fields/NumberofDeliveryAttempts__c.field-meta.xml
<CustomField>
    <fullName>NumberofDeliveryAttempts__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Delivery Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>