force-app/main/default/objects/Order/fields/Order_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_End_Date__c</fullName>
    <description>For Report data</description>
    <formula>EndDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order End Date</label>
    <type>Date</type>
</CustomField>