force-app/main/default/objects/Order/fields/Order_Manual_Upload_Reference__c.field-meta.xml
<CustomField>
    <fullName>Order_Manual_Upload_Reference__c</fullName>
    <externalId>true</externalId>
    <label>Order Manual Upload Reference</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>