force-app/main/default/objects/Order/fields/Order_Number_Formula__c.field-meta.xml
<CustomField>
    <fullName>Order_Number_Formula__c</fullName>
    <formula>IF( ISBLANK(Id) , 0, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Number Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>