force-app/main/default/objects/Order/fields/Order_Owner_Read_Only__c.field-meta.xml
<CustomField>
    <fullName>Order_Owner_Read_Only__c</fullName>
    <formula>Owner:User.FirstName  + &apos; &apos; + Owner:User.LastName</formula>
    <label>Order Owner</label>
    <type>Text</type>
</CustomField>