force-app/main/default/objects/Order/fields/OrderedBy__c.field-meta.xml
<CustomField>
    <fullName>OrderedBy__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Ordered By</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR 3 OR 4</booleanFilter>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Adult</value>
        </filterItems>
        <filterItems>
            <field>$Source.To_be_archived__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$User.Bypass_Lookup_Filter__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>