force-app/main/default/objects/Order/fields/OrderedBy_old__c.field-meta.xml
<CustomField>
    <fullName>OrderedBy_old__c</fullName>
    <label>OrderedBy (old)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>