force-app/main/default/objects/Order/fields/OrderNotes__c.field-meta.xml
<CustomField>
    <fullName>OrderNotes__c</fullName>
    <label>Order Notes</label>
    <type>TextArea</type>
</CustomField>