force-app/main/default/objects/Order/fields/OrderSubmittedDate__c.field-meta.xml
<CustomField>
    <fullName>OrderSubmittedDate__c</fullName>
    <description>[9-Jul-21 KSK] Used in TW Market Data Migration; Dynamics CRM</description>
    <label>Order Submitted Date</label>
    <type>Date</type>
</CustomField>