force-app/main/default/objects/Order/fields/Original_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Original_Order_Number__c</fullName>
    <label>Original Order Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>