force-app/main/default/objects/Order/fields/OriginalOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>OriginalOrderNumber__c</fullName>
    <description>[9-Jul-21 KSK] Used in TW Market data migration; Dynamics CRM</description>
    <inlineHelpText>Original Order Number for Dynamics CRM</inlineHelpText>
    <label>Original Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>