force-app/main/default/objects/Order/fields/Parent_Order__c.field-meta.xml
<CustomField>
    <fullName>Parent_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Child Orders</relationshipLabel>
    <relationshipName>Child_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>