force-app/main/default/objects/Order/fields/PaymentRule__c.field-meta.xml
<CustomField>
    <fullName>PaymentRule__c</fullName>
    <label>Payment Rule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>