force-app/main/default/objects/Order/fields/PaymentSource__c.field-meta.xml
<CustomField>
    <fullName>PaymentSource__c</fullName>
    <label>Payment Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>