force-app/main/default/objects/Order/fields/PreferredDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>PreferredDeliveryDate__c</fullName>
    <label>Preferred Delivery Date</label>
    <type>Date</type>
</CustomField>