force-app/main/default/objects/Order/fields/PreferredDeliveryTime__c.field-meta.xml
<CustomField>
    <fullName>PreferredDeliveryTime__c</fullName>
    <label>Preferred Delivery Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Slot A : 9am-12noon</fullName>
            </value>
            <value>
                <fullName>Slot B : 12noon - 3pm</fullName>
            </value>
            <value>
                <fullName>Slot C : 3pm - 6pm</fullName>
            </value>
            <value>
                <fullName>Slot D : 6pm -10pm</fullName>
            </value>
            <value>
                <fullName>Slot E : 9am-10pm</fullName>
            </value>
            <value>
                <fullName>SG_09:00 AM to 09:00 PM</fullName>
                <label>09:00 AM to 09:00 PM</label>
            </value>
            <value>
                <fullName>SG_09:00 AM to 05:00 PM</fullName>
                <label>09:00 AM to 05:00 PM</label>
            </value>
            <value>
                <fullName>SG_09:00 AM to 15:00 PM</fullName>
                <label>09:00 AM to 15:00 PM</label>
            </value>
            <value>
                <fullName>SG_12:00 AM to 06:00 PM</fullName>
                <label>12:00 AM to 06:00 PM</label>
            </value>
            <value>
                <fullName>SG_15:00 PM to 09:00 PM</fullName>
                <label>15:00 PM to 09:00 PM</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>