force-app/main/default/objects/Order/fields/PromoterCode__c.field-meta.xml
<CustomField>
    <fullName>PromoterCode__c</fullName>
    <formula>Abbott_Partner_Code__r.PartnerCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promoter Code</label>
    <type>Text</type>
</CustomField>