force-app/main/default/objects/Order/fields/PromoterName__c.field-meta.xml
<CustomField>
    <fullName>PromoterName__c</fullName>
    <formula>Abbott_Partner_Code__r.PartnerName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promoter Name</label>
    <type>Text</type>
</CustomField>