force-app/main/default/objects/Order/fields/RecommendedBy__c.field-meta.xml
<CustomField>
    <fullName>RecommendedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recommended By</label>
    <referenceTo>AbbottPartner__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>