force-app/main/default/objects/Order/fields/ReinstateReason__c.field-meta.xml
<CustomField>
    <fullName>ReinstateReason__c</fullName>
    <label>Reinstate Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>