force-app/main/default/objects/Order/fields/RelatedCampaign__c.field-meta.xml
<CustomField>
    <fullName>RelatedCampaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>