force-app/main/default/objects/Order/fields/Repeat_Order__c.field-meta.xml
<CustomField>
    <fullName>Repeat_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subscription Order?</label>
    <type>Checkbox</type>
</CustomField>