force-app/main/default/objects/Order/fields/RepeatOrder__c.field-meta.xml
<CustomField>
    <fullName>RepeatOrder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[9-Jul-21 KSK] Used in TW Market Data Migration; Dynamics CRM</description>
    <label>Repeat Order</label>
    <type>Checkbox</type>
</CustomField>